# rfid-gate-log

./: .gitignore  Dockerfile  README.md  docker-compose.yml  gunicorn.conf.py  gunicorn.conf_api.py  manage.sh  pyproject.toml
.github/workflows/: publish.yml
grafana/provisioning/dashboards/: alarmer.json
grafana/provisioning/datasources/: gate-log.yaml
nginx/: Dockerfile  nginx.conf
rfid_gate_log/: manage.py
rfid_gate_log/gate_log/: admin.py  apps.py  models.py  urls.py  views.py
rfid_gate_log/gate_log/management/commands/: load_buffer.py  load_buffer_api.py  load_counter.py  load_counter_api.py  lookup_titles.py  people_count.py  people_count_db.py
rfid_gate_log/gate_log/migrations/: 0001_initial.py  0002_alter_peoplecountertime_time.py  0003_alter_peoplecounter_options_and_more.py  0004_alter_logentry_title.py
rfid_gate_log/lookup/: lookup.py  sip.py
rfid_gate_log/rfid_gate_log/: asgi.py  settings.py  urls.py  wsgi.py
